--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "Wedding 2025",
   "version": "1.0.0",
-  "description": " ",
   "main": "server/server.js",
-  "scripts": {
-    "start": "node server/server.js",
-    "heroku-postbuild": "npm run build-client",
-    "build-client": "cd client && npm install && npm run build",
-    "install-server": "cd server && npm install",
-    "install-client": "cd client && npm install",
-    "dev": "concurrently \"cd server && npm start\" \"cd client && npm start\"",
-    "postinstall": "npm install --prefix server"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "engines": {
     "node": "18.x",
     "npm": "7.x"
+  },
+  "scripts": {
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client",
+    "dev": "concurrently \"cd server && nodemon server.js\" \"cd client && npm start\""
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^6.8.0",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "json2csv": "^6.0.0",
+    "multer": "^1.4.5"
   },
   "devDependencies": {
     "concurrently": "^8.2.1",
