--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wedding-2025",
+  "name": "Wedding 2025",
   "version": "1.0.0",
   "description": " ",
   "main": "server/server.js",
@@ -9,7 +9,8 @@
     "build-client": "cd client && npm install && npm run build",
     "install-server": "cd server && npm install",
     "install-client": "cd client && npm install",
-    "dev": "concurrently \"cd server && nodemon server.js\" \"cd client && npm start\""
+    "dev": "concurrently \"cd server && nodemon server.js\" \"cd client && npm start\"",
+      "postinstall": "npm install --prefix server"
   },
   "keywords": [],
   "author": "",
@@ -17,10 +18,6 @@
   "engines": {
     "node": "18.x",
     "npm": "7.x"
-  },
-  "devDependencies": {
-    "concurrently": "^8.2.1",
-    "nodemon": "^3.1.10"
   },
   "dependencies": {
     "cors": "^2.8.5",
